--- a/front/public/index.html
+++ b/front/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Lab 4</title>
   </head>
   <body>
