feat: redux login works now

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta http-equiv="refresh" content="0; url='build/'" />
+    <title>Redirect</title>
 </head>
 <body>
 <p>Please follow <a href="build/">this link</a>.</p>
