--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,6 +6,13 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      body{
+        background-image: url(https://i.gifer.com/Paw.gif);
+        background-size: 25%;
+        background-repeat: space;
+      }
+    </style>
     <title>Web Lab 4</title>
   </head>
   <body>
